# tree_flash

./: .gitignore  CLAUDE.md  SUMMARY.md  TODO.md  config.py  experiments.md  method.md  method_v2.md  outline.md  peo.yaml  pyproject.toml  train.py  writeup.md
baselines/: __init__.py  eagle-3  eagle_3_eval.py
cleaned-up/: README.md  data.py  infer.py  model.py  spec_decode.py  stage2.py  stage2_v2.py  trainer.py  utils.py
cleanedup/: README.md  data.py  model.py  spec_decode.py  stage2.py  trainer.py
data/: __init__.py  dataset.py
data_pipeline/: stage1.py  stage1_generate.py  stage2_trees.py  stage2_v2.py  visualize_stage2_v2_tree.py
experiments/dev/: README.md  run.sh
experiments/q3_4b_abl_exp1/: run.sh
model/: __init__.py  ar_head.py  draft_model.py  draft_wrapper.py
src/: __init__.py  data.py  dflash_eval.py  eagle3_eval.py  spec_decode.py  trainer.py
src/models/: __init__.py  dflash.py
src/trees/: __init__.py  blocked.py  branch_off.py  prunable.py  relation_ids.py  var_tree.py
tests/: test_baseline_eagle_3.py  test_cleaned_up_spec_decode.py  test_cleaned_up_stage2_v2.py  test_cleaned_up_trainer_prefill.py  test_data_and_trees.py  test_dflash_and_trainer.py  test_stage2_chunking.py  test_stage2_v2.py  test_visualize_stage2_v2_tree.py
trainer/: __init__.py  bench.py  loss.py  metrics.py  spec_decode.py  trainer.py
tree/: __init__.py  mask.py  spec.py
v2/: model.py  spec_dec.py  stage2.py  stage2_2.py  stage3.py  summary.md  viz_tree.py
