[project]
name = "tree-flash"
version = "0.1.0"
description = "Tree-structured speculative decoding extending DFlash"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5.0",
    "transformers>=4.45.0",
    "lightning>=2.4.0",
    "h5py>=3.10.0",
    "datasets>=2.20.0",
    "accelerate>=0.33.0",
    "rich>=13.0.0",
    "packaging",
    "ninja",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ipython",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tree", "data", "model", "trainer"]

[dependency-groups]
dev = [
    "pytest",
    "ipython",
]

[tool.uv.sources]
# SGLang pinned to the DFlash-compatible PR branch
# sglang = { git = "https://github.com/sgl-project/sglang.git", rev = "refs/pull/20547/head", subdirectory = "python" }
