[project]
name = "tree-flash"
version = "0.1.0"
description = "Tree-structured drafter training on top of Stage 2 HDF5 data"
requires-python = ">=3.11"
dependencies = [
    "cut-cross-entropy",
    "datasets>=2.20.0",
    "h5py>=3.10.0",
    "jsonargparse>=4.32.0",
    "lightning>=2.4.0",
    "torch>=2.9.1",
    "transformers>=4.55.0",
    "wandb>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
eagle = [
    "eagle-llm @ git+https://github.com/SafeAILab/EAGLE.git",
    "fschat>=0.2.36",
]

[project.scripts]
eagle3-eval = "src.eagle3_eval:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
cut-cross-entropy = { git = "https://github.com/apple/ml-cross-entropy.git" }
